msg text align fix attempt 2

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -52,12 +52,10 @@
 
 .msg h2 {
     color: #FCA311;
-    text-align: center;
 }
 
 .msg p {
     color: #E5E5E5;
-    text-align: center;
 }
 
 .logo{
